renamed package, added dependency spring-jpa, added spring datasource

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_cocktails
+spring.datasource.username=postgres
+spring.datasource.password=4497743
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+
+spring.jpa.show-sql=true
+# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
+# schema will be automatically created afresh for every start of application
+
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
